--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <p>This is a basic GitHub site for me to keep track of cybersecurity tools and resources.
 </p>
+<p>If I can get it working, lol.</p>
 </body>
 </html>
